# QTelegram

./: README.md
ClientApi/: CMakeLists.txt
ClientApi/cmake/: build_prefix.cmake
ClientApi/doc/: CMakeLists.txt  Doxyfile
ClientApi/doc/html/: _c_make_lists_8txt.html  _settings_wrapper_8cpp.html  annotated.html  authmenu_8cpp.html  authmenu_8h.html  authmenu_8h_source.html  chatwidget_8cpp.html  chatwidget_8h.html  chatwidget_8h_source.html  class_auth_menu-members.html  class_auth_menu.html  class_chat_widget-members.html  class_chat_widget.html  class_net_service-members.html  class_net_service.html  class_settings_wrapper-members.html  class_settings_wrapper.html  class_style_dialog-members.html  class_style_dialog.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  namespace_ui.html  namespaces.html  netservice_8cpp.html  netservice_8h.html  netservice_8h_source.html  styledialog_8cpp.html  styledialog_8h.html  styledialog_8h_source.html
ClientApi/doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  searchdata.js  variables_0.js  (+9 more)
ClientApi/doc/rtf/: refman.rtf
ClientApi/src/: CMakeLists.txt  SettingsWrapper.cpp  authmenu.cpp  authmenu.h  authmenu.ui  chatwidget.cpp  chatwidget.h  chatwidget.ui  main.cpp  netservice.cpp  netservice.h  resources.qrc  styledialog.cpp  styledialog.h  styledialog.ui
ClientApi/src/res/style/: lightauth.qss  lightchat.qss  nightauth.qss  nightchat.qss
ServerApplication/: CMakeLists.txt
ServerApplication/doc/: Doxyfile
ServerApplication/doc/html/: _c_make_lists_8txt.html  annotated.html  authanswer_8cpp.html  authanswer_8h.html  authanswer_8h_source.html  basedata_8cpp.html  basedata_8h.html  basedata_8h_source.html  class_auth_answer-members.html  class_auth_answer.html  class_base_data-members.html  class_base_data.html  class_connection_handler-members.html  class_connection_handler.html  class_message-members.html  class_message.html  class_settings_wrapper-members.html  class_settings_wrapper.html  class_user_data-members.html  class_user_data.html  class_user_list-members.html  class_user_list.html  classes.html  connectionhandler_8cpp.html  connectionhandler_8h.html  connectionhandler_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  message_8cpp.html  (+11 more)
ServerApplication/doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.html  enumvalues_2.js  enumvalues_3.html  enumvalues_3.js  enumvalues_4.html  enumvalues_4.js  enumvalues_5.html  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  (+25 more)
ServerApplication/doc/rtf/: refman.rtf
ServerApplication/src/: CMakeLists.txt  authanswer.cpp  authanswer.h  basedata.cpp  basedata.h  connectionhandler.cpp  connectionhandler.h  main.cpp  message.cpp  message.h  settingswrapper.cpp  settingswrapper.h  userdata.cpp  userdata.h  userlist.cpp  userlist.h
